Update MixinExplosions.java